# decal

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
decal-core/: Cargo.toml
decal-core/examples/gh_card/: Cargo.toml  README.md
decal-core/examples/gradients/: Cargo.toml
decal-core/examples/text_stencil/: Cargo.toml
decal-core/src/: lib.rs  main.rs  prelude.rs
decal-core/src/attributes/: alignment.rs  border.rs  color.rs  corner_radius.rs  dimensions.rs  fill.rs  flex_wrap.rs  gap.rs  margin.rs  mod.rs  overflow.rs  padding.rs  paint.rs  position.rs
decal-core/src/builders/: block.rs  column.rs  flex.rs  fragment.rs  grid.rs  image.rs  mod.rs  root.rs  row.rs  text.rs
decal-core/src/capabilities/: aspect_ratio.rs  background.rs  blendable.rs  border.rs  clippable.rs  container_alignment.rs  corner_radius.rs  dimensions.rs  drawable.rs  filter_effects.rs  flex_container.rs  gap.rs  grid_alignment.rs  grid_container.rs  hideable.rs  margin.rs  mod.rs  opacity.rs  padding.rs  positioned.rs  sealed.rs  self_alignment.rs  textual.rs  transformation.rs  visibility.rs
decal-core/src/filters/: context.rs  filter.rs  mod.rs  region.rs
decal-core/src/layout/: arena.rs  context.rs  decal.rs  engine.rs  font.rs  image.rs  mod.rs  node.rs  node_id.rs  options.rs  scene.rs  stencil.rs  text.rs  typography.rs
decal-core/src/macros/: aspect_ratio.rs  background.rs  border.rs  border_color.rs  container_align.rs  corner_radius.rs  dimensions.rs  finite_f32.rs  flex_wrap.rs  gap.rs  grid_align.rs  margin.rs  methods.rs  mod.rs  node_builder.rs  node_setters.rs  normalized_f32.rs  opacity.rs  overflow.rs  padding.rs  position.rs  positive_f32.rs  self_align.rs  text.rs  transform.rs  visibility.rs
decal-core/src/nodes/: column.rs  fragment.rs  mod.rs  root.rs  row.rs  snippet.rs  text.rs
decal-core/src/paint/: appearance.rs  iri.rs  mod.rs  resource.rs  resources.rs  round_rect.rs  scaled_radii.rs
decal-core/src/primitives/: alignment.rs  blend_mode.rs  clip_path.rs  color.rs  color_interpolation.rs  corner.rs  cross_origin.rs  display.rs  edge_mode.rs  ellipsize.rs  fill.rs  filter.rs  filter_input.rs  filter_units.rs  flex_direction.rs  flex_wrap.rs  font_style.rs  font_weight.rs  gradient_transform.rs  gradient_units.rs  length.rs  light_source.rs  linear_gradient.rs  mask.rs  mask_type.rs  mod.rs  overflow.rs  paint.rs  paint_transform.rs  path.rs  pattern.rs  pattern_content_units.rs  pattern_units.rs  point.rs  position.rs  positive_f32_pair.rs  preserve_aspect_ratio.rs  primitive_units.rs  radial_gradient.rs  rect.rs  (+8 more)
decal-core/src/test_utils/: assert_xml.rs  mod.rs  str_sink.rs
decal-core/src/text/: align.rs  mod.rs  style.rs  weight.rs  wrap.rs
decal-core/src/utils/: angle_to_line.rs  element_writer.rs  encode_image.rs  float_writer.rs  is_default.rs  mod.rs  path_builder.rs  path_writer.rs  resolve_image.rs  write_spaced.rs  writer.rs
decal-macros/: Cargo.toml  README.md
decal-macros/src/: ident_gen.rs  lib.rs  text.rs
decal-macros/src/ast/: child.rs  constants.rs  control_expr.rs  ctrl_expr.rs  method_call.rs  mod.rs  node.rs  tree.rs
decal-macros/tests/: ui.rs
decal-macros/tests/ui/: exm.rs  exm.stderr
(+111 files in other folders)
