[package]
name = "decal"
description = "Under development"
version = "0.0.0"
edition = "2021"
license.workspace = true
rust-version = "1.87.0"
repository = "https://github.com/mem-red/decal"

[dependencies]
base64 = "0.22.1"
cosmic-text = { version = "0.15.0", features = ["shape-run-cache", "hashbrown"] }
decal-macros = { path = "../decal-macros" }
paste = "1.0.15"
png = "0.18.0"
resvg = "0.45.1"
smallvec = "1.15.1"
swash = { version = "0.2.6", features = ["scale"] }
taffy = "0.9.2"
thiserror = "2.0.17"
tiny-skia = "0.11.4"
usvg = "0.45.1"
zeno = "0.3.3"
