[package]
name = "decal"
description = "Under development"
version = "0.0.0"
edition = "2021"
license.workspace = true
rust-version = "1.87.0"
repository = "https://github.com/mem-red/decal"

[dependencies]
base64 = "0.22.1"
color = "0.3.2"
cosmic-text = { version = "0.16.0", features = ["shape-run-cache", "hashbrown"] }
decal-macros = { path = "../decal-macros" }
enum-display = "0.2.1"
hashbrown = "0.16.1"
infer = "0.19.0"
lru = "0.16.2"
parking_lot = "0.12.5"
png = "0.18.0"
quick-xml = "0.38.4"
resvg = "0.45.1"
ryu = "1.0.20"
smallvec = "1.15.1"
strict-num = "0.2.0"
swash = { version = "0.2.6", features = ["scale"] }
taffy = "0.9.2"
thiserror = "2.0.17"
tiny-skia = "0.11.4"
twox-hash = { version = "2.1.2", default-features = false, features = ["std", "xxhash3_64"] }
ureq = "3.1.4"
usvg = "0.45.1"
zeno = "0.3.3"
