[package]
name = "decal-macros"
description = "Under development"
version = "0.0.0"
edition = "2021"
license.workspace = true
rust-version = "1.87.0"
repository = "https://github.com/mem-red/decal"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.106"
decal = { path = "../decal-core" }
walkdir = "2.5.0"
